--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "react demo",
   "main": "index.js",
   "dependencies": {
+    "express": "^4.14.1",
+    "pug": "^2.0.0-beta11",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
