--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "react demo",
   "main": "index.js",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "express": "^4.14.1",
+    "jquery": "^3.1.1",
+    "less": "^2.7.2",
     "pug": "^2.0.0-beta11",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
@@ -14,6 +17,10 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.10.0",
+    "less-loader": "^2.2.3",
+    "style-loader": "^0.13.1",
     "webpack": "^2.2.1"
   },
   "scripts": {
